# sali

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  TODO.md
src/: cli.rs  components.rs  config.rs  login.rs  main.rs
src/components/: build.rs  mod.rs
