[package]
name = "sali"
version = "0.1.0"
edition = "2021"
description = "A customizable greetd frontend using gtk4"

[dependencies]
greetd_ipc = { git = "https://github.com/kennylevinsen/greetd", features = ["sync-codec"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.152", features = ["derive"] }
rsass = "0.26.0"
chrono = "0.4.23"
log = "0.4.22"
env_logger = "0.11.5"
dirs = "5.0.1"
clap = { version = "4.5.16", features = ["derive"] }
gtk4-layer-shell = "0.4.0"
gtk4 = "0.9.0"
